# cmake-base

./: CMakeLists.txt  README.md
include/: entry.hpp
source/: entry.cpp
